# signstream-eval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  collect_data.py  environment.yml  hand_tracker.py  index.html  package-lock.json  package.json  pyproject.toml  python-requirements.txt  recognize_signs.py  requirements.txt  train_model.py  vercel.json  vite.config.js
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
configs/dataset/: aslmtp.yaml  fsboard.yaml  phoenix14t.yaml  tinyset.yaml
configs/experiment/: e1_pareto.yaml  e2_fsboard.yaml  e3_grammar.yaml  smoke.yaml  validity_injection.yaml
configs/metrics/: core.yaml  stretch.yaml
configs/model/: bilstm_ctc.yaml  transformer_ctc.yaml
configs/streaming/: fixed.yaml  offline.yaml  sweep.yaml
configs/tracking/: mlflow.yaml  none.yaml  wandb_offline.yaml  wandb_online.yaml
data/: README.md
docs/: USER_TESTING_GUIDE.md  dataset_access.md  protocol_spec.md  reproduce.md
docs/adr/: 0001-pin-mediapipe-version.md  0008-pin-mediapipe-version.md  README.md
notebooks/: README.md
paper/figures/: README.md
paper/tables/: README.md
scripts/: build_alignments.py  extract_landmarks.py  make_tinyset.py
src/: app.js  styles.css
src/signstream/: __init__.py  run.py
src/signstream/alignment/: __init__.py
src/signstream/data/: __init__.py
src/signstream/data/landmarks/: __init__.py  cache_writer.py  extractor.py  schema.py  video_processor.py
src/signstream/landmarks/: cache_writer.py  extractor.py  schema.py  video_processor.py
src/signstream/metrics/: __init__.py  base.py  diffing.py  quality.py
src/signstream/models/: __init__.py
src/signstream/runner/: __init__.py
src/signstream/schema/: __init__.py  emission_log.schema.json  log.py  records.py  validation.py
src/signstream/stats/: __init__.py
src/signstream/streaming/: __init__.py
src/signstream/tracking/: __init__.py
src/signstream/utils/: __init__.py
src/signstream/viz/: __init__.py
tests/fixtures/golden_logs/: README.md
tests/fixtures/golden_logs/metrics/: cer_edge.yaml  cer_typical.yaml  diff_cases.yaml  wer_edge.yaml  wer_typical.yaml  wer_undefined.yaml
tests/fixtures/golden_logs/schema/: invalid_bad_values_run_meta.yaml  invalid_duplicate_utt_start.yaml  invalid_emission_before_utt_start.yaml  invalid_event_after_final.yaml  invalid_event_fields.yaml  invalid_malformed_jsonl.yaml  invalid_missing_final.yaml  invalid_missing_required_run_meta.yaml  invalid_multiple_final.yaml  invalid_nonfinite_values.yaml  invalid_reference_coverage.yaml  invalid_run_meta_not_object.yaml  invalid_t_frame_decreasing.yaml  invalid_t_frame_out_of_range.yaml  invalid_unknown_event_type.yaml  invalid_unsupported_schema_version.yaml  invalid_utt_start_after_emission.yaml  invalid_wrong_types_run_meta.yaml  valid_edge_cases.yaml  valid_extra_fields.yaml  valid_offline_topline.yaml  valid_typical.yaml  valid_with_reference.yaml
tests/fixtures/tinyset/: README.md
tests/integration/: README.md
tests/unit/: test_metrics_diff.py  test_metrics_quality.py  test_scaffold.py  test_schema_api.py  test_schema_golden.py  test_schema_roundtrip.py
