[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "signstream-eval"
version = "0.1.0"
description = "A standardized streaming evaluation protocol and harness for continuous sign language recognition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Bat-Orgil Erdenebat" }]
keywords = [
    "sign-language",
    "continuous-sign-language-recognition",
    "streaming",
    "evaluation",
    "latency",
    "metrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependency policy: schema/, metrics/, stats/ import only
# numpy/scipy/stdlib (plus jsonschema for contract validation). No torch —
# third parties must be able to validate and score emission logs without a
# deep-learning stack.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Everything needed to score third-party emission logs (parquet output,
# aggregate tables). Still torch-free by design.
score = [
    "pandas>=2.1",
    "pyarrow>=14",
]
# Full pipeline: training, simulation, landmark extraction, figures,
# tracking. mediapipe is pinned exactly — versions 0.10.18+ removed the
# legacy solutions.holistic API (see docs/adr/0001), and mediapipe requires
# numpy<2.0, so the ceiling lives here rather than in core deps.
full = [
    "signstream-eval[score]",
    "numpy>=1.26,<2.0",
    "torch>=2.4,<2.5",
    "hydra-core>=1.3",
    "matplotlib>=3.8",
    "mediapipe==0.10.14",
    "opencv-python-headless>=4.9",
    "wandb>=0.17",
]
dev = [
    "signstream-eval[score]",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "types-jsonschema>=4.21",
    "jiwer>=3.0",
]

[project.urls]
Repository = "https://github.com/BatOrgil7/signstream-eval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["signstream"]

[tool.mypy]
python_version = "3.11"
files = ["src/signstream"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

# mypy --strict equivalent on the correctness-critical core
# (schema/metrics/stats); standard checking elsewhere.
[[tool.mypy.overrides]]
module = ["signstream.schema.*", "signstream.metrics.*", "signstream.stats.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

# full-extra dependencies without type stubs; not installed in the dev/CI
# environment.
[[tool.mypy.overrides]]
module = ["mediapipe", "mediapipe.*", "cv2", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests excluded from the default CI unit run",
]

# Coverage gates (>=75% overall, >=90% on schema/metrics/stats) are enforced
# in CI once the first metric code lands; the scaffold carries no gate.
[tool.coverage.run]
source = ["signstream"]

[tool.coverage.report]
show_missing = true
